airflow-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: airflow
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: airflow
        role: web
        tier: backend
    spec:
      containers:
      - name: web
        image: kysnm/docker-airflow:latest
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /admin/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 3
        ports:
        - containerPort: 8080
