airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: airflow
    role: web
    tier: backend
  type: NodePort
