redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-deployment
spec:
  ports:
  - port: 6379
  selector:
    run: airflow-redis
