ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "airflow-ip"
spec:
  backend:
    serviceName: airflow-svc
    servicePort: 8080
